# hakoniwa-godot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  issue.md  task.md
addons/hakoniwa/: codec_manifest.json  hakoniwa.gdextension  plugin.cfg
addons/hakoniwa/scripts/: hakoniwa_codec_node.gd  hakoniwa_endpoint_inspector_plugin.gd  hakoniwa_pdu_endpoint.gd  hakoniwa_simnode_inspector_plugin.gd  hakoniwa_simulation_callbacks.gd  hakoniwa_simulation_node.gd  hakoniwa_typed_endpoint.gd  plugin.gd
addons/hakoniwa_robot_sync/: plugin.cfg
addons/hakoniwa_robot_sync/scripts/: joint_state_mapper.gd  robot_profile_loader.gd  robot_profile_validator.gd  robot_sync_controller.gd  transform_converter.gd
docs/: README.md  api_overview.md  api_reference.md  api_sequences.md  architecture.md  codec_plugin_design.md  core_pro_design.md  core_pro_test_design.md  core_pro_user_interface.md  current_status.md  developer_build.md  installation.md  packaging_strategy.md  pdu_endpoint_design.md  physics_time_sync_impl.md  physics_time_sync_strategy.md  physics_time_sync_test_plan.md  quick_start.md  robot_sync_design.md  troubleshooting.md
examples/basic_subscriber/: main.gd  main.tscn
examples/basic_subscriber/config/: endpoint_internal_queue_with_pdu.json  endpoint_internal_with_pdu.json
examples/basic_subscriber/config/comm/storage_demo/: pdutypes.json
examples/core_pro_smoke/: main.gd  main.tscn
examples/core_pro_two_asset/: main.gd
examples/core_pro_two_asset/config/comm/: shm_poll_comm.json
examples/mujoco/assets/: tb3_reference_sync.gd
examples/mujoco/config/: endpoint_shm_poll_with_pdu.json
examples/mujoco/config/comm/: shm_poll_comm.json  tb3-pdudef-compact.json  tb3-pdutypes.json
examples/python_pdu_minimal/: README.md  main.gd  project.godot  python_controller.py  python_controller_ep.py  python_sample.py  sample.gd
examples/python_pdu_minimal/config/: endpoint_shm_callback_with_pdu.json  endpoint_shm_with_pdu.json  endpoint_shm_with_pdu_python.json  endpoint_shm_with_pdu_python_peer.json
examples/python_pdu_minimal/config/cache/: buffer.json
examples/python_pdu_minimal/config/comm/: pdutypes.json  shm_callback_comm.json  shm_poll_comm.json  shm_poll_comm_python.json  shm_poll_comm_python_peer.json
examples/python_pdu_websocket/: README.md  python_websocket_client.py  python_websocket_server.py  sample.gd
examples/python_pdu_websocket/config/: endpoint_websocket_client.json  endpoint_websocket_server.json
examples/python_pdu_websocket/config/cache/: queue.json
examples/python_pdu_websocket/config/comm/: pdu_def.json  pdutypes.json  websocket_client_inout_comm.json  websocket_server_inout_comm.json
examples/simnode_minimal/: README.md  sample.gd
native/: CMakeLists.txt
native/src/: hakoniwa_codec_registry.cpp  hakoniwa_codec_registry.h  hakoniwa_core_asset.cpp  hakoniwa_core_asset.h  hakoniwa_pdu_endpoint.cpp  hakoniwa_pdu_endpoint.h  register_types.cpp  register_types.h
native/src/codec/: codec_plugin_api.h  codec_plugin_registry.cpp  codec_plugin_registry.h  shared_library.cpp  shared_library.h
native/templates/: codec_plugin.cpp.in  codec_plugin.gdextension.in  codec_plugin_init.cpp.in
tests/: CMakeLists.txt  README.md
tests/integration/core_pro_two_asset/: project.godot  python_controller.py  two_asset_callbacks.gd
tests/smoke/basic_subscriber/: main.gd  project.godot
tests/smoke/basic_subscriber/config/cache/: buffer.json  queue.json
tests/smoke/basic_subscriber/config/comm/storage_demo/: pdu_def.json  pdutypes.json
tests/smoke/core_pro_smoke/: main.gd  project.godot  smoke_callbacks.gd
tools/: addon_artifact_tool.ps1  addon_artifact_tool.sh  build_all_codecs.sh  codec_plugin_tool.sh  message_addon_tool.sh  run_core_pro_conductor.sh  run_core_pro_smoke.sh  run_core_pro_two_asset_controller.sh  run_python_pdu_minimal_controller.sh  run_python_pdu_minimal_peer.sh
